# icarus

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  Icarus.cpp  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang.yml  coverage.yml  docker-common.yml  docker.yml  doxygen.yml  icarus-ci.yml  ubuntu.yml
Analysis/: EngineValue.cpp  ExecutionEngine.cpp  FunctionContext.cpp  ProgramContext.cpp
LICENSES/: MIT.txt
Logger/: Logger.cpp
Passes/: CPAPass.cpp  IAAPass.cpp  ICCPass.cpp  IcarusPass.cpp  Pass.cpp  PassArguments.cpp
Support/: LLVMTypes.cpp  LLVMValue.cpp  String.cpp
Threads/: ThreadPool.cpp
cmake/: LLVMLibraries.cmake
docker/: Dockerfile  Dockerfile.base  README.md  build-docker.sh  build-llvm.sh  build.sh  install-cmake.sh  install-llvm.sh
docker/patches/: MicrosoftDemangleNodes.patch  llvm-10.patch  llvm-5.patch  llvm-6.patch  llvm-7.patch  llvm-8.patch  llvm-9.patch
docs/: CMakeLists.txt  doxygen.cfg.in
include/icarus/ADT/: Container.h  FlagIterator.h  Range.h
include/icarus/Analysis/: EngineValue.h  ExecutionEngine.h  FunctionContext.h  InterpreterEngine.h  ProgramContext.h
include/icarus/Logger/: Logger.h
include/icarus/Passes/: AIAPass.h  CPAPass.h  EEAPass.h  IAAPass.h  ICCPass.h  IcarusPass.h  Pass.h  PassArguments.h
include/icarus/Support/: Clang.h  JSON.h  LLVMTypes.h  LLVMValue.h  Lambda.h  Math.h  Namespaces.h  ObjectRegistry.h  Registry.h  String.h  Traits.h
include/icarus/Threads/: ThreadContainer.h  ThreadPool.h  ThreadQueue.h  ThreadSafeContainer.h  ThreadSafeMap.h  ThreadSafeQueue.h
include/nlohmann/: json.hpp
src/: CMakeLists.txt  Icarus.cpp
src/ADT/: CMakeLists.txt  FlagIterator.cpp
src/Analysis/: CMakeLists.txt  EngineValue.cpp  ExecutionEngine.cpp
src/Logger/: CMakeLists.txt  Logger.cpp
src/Passes/: CMakeLists.txt  CPAPass.cpp  IAAPass.cpp  ICCPass.cpp  Pass.cpp  PassArguments.cpp
src/Support/: CMakeLists.txt  LLVMTypes.cpp  LLVMValue.cpp  String.cpp
src/Threads/: CMakeLists.txt  ThreadPool.cpp
tests/: CMakeLists.txt  TestIcarus.cpp  doctest.h
tests/TestADT/: CMakeLists.txt  TestFlagIterator.cpp
tests/TestPasses/: CMakeLists.txt  TestICCPass.cpp
tests/include/: doctest.h
tests/samples/: CMakeLists.txt  constant_propagation.c  indirect_calls.c
tools/: run-clang-format.py  run-clang-tidy.py  run-doxygen-coverage.py  run-gcovr-coverage.sh
